--- a/jupyter_russian/topic03_decision_trees_knn/lesson3_decision_trees_dirty_inclass.ipynb
+++ b/jupyter_russian/topic03_decision_trees_knn/lesson3_decision_trees_dirty_inclass.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('../../data/telecom_churn.csv')"
@@ -247,9 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data.drop(['State', 'Voice mail plan'], axis=1, inplace=True)"
@@ -258,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data['International plan'] = data['International plan'].map({'Yes': 1,\n",
@@ -309,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y = data['Churn'].astype('int')"
@@ -320,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = data.drop('Churn', axis=1)"
@@ -351,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
@@ -363,9 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, \n",
@@ -396,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "first_tree = DecisionTreeClassifier(random_state=17)"
@@ -412,10 +394,30 @@
     {
      "data": {
       "text/plain": [
-       "0.9142706160222772"
+       "array([0.9143469 , 0.91220557, 0.92077088, 0.90772532, 0.91416309])"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(first_tree, X_train, y_train, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9138423504976518"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,10 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier"
@@ -437,10 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "first_knn = KNeighborsClassifier()"
@@ -448,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +455,7 @@
        "0.8671274043984523"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,10 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV"
@@ -486,10 +482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tree_params = {'max_depth': np.arange(1, 11), 'max_features':[.5, .7, 1]}"
@@ -497,10 +491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tree_grid = GridSearchCV(first_tree, tree_params, cv=5, n_jobs=-1)"
@@ -508,34 +500,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 137 ms, sys: 42.3 ms, total: 179 ms\n",
-      "Wall time: 395 ms\n"
+      "CPU times: user 173 ms, sys: 53.8 ms, total: 226 ms\n",
+      "Wall time: 1.51 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
-       "            max_features=None, max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, presort=False, random_state=17,\n",
-       "            splitter='best'),\n",
-       "       fit_params=None, iid=True, n_jobs=-1,\n",
-       "       param_grid={'max_depth': array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]), 'max_features': [0.5, 0.7, 1]},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
-       "       scoring=None, verbose=0)"
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=DecisionTreeClassifier(class_weight=None,\n",
+       "                                              criterion='gini', max_depth=None,\n",
+       "                                              max_features=None,\n",
+       "                                              max_leaf_nodes=None,\n",
+       "                                              min_impurity_decrease=0.0,\n",
+       "                                              min_impurity_split=None,\n",
+       "                                              min_samples_leaf=1,\n",
+       "                                              min_samples_split=2,\n",
+       "                                              min_weight_fraction_leaf=0.0,\n",
+       "                                              presort=False, random_state=17,\n",
+       "                                              splitter='best'),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'max_depth': array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]),\n",
+       "                         'max_features': [0.5, 0.7, 1]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +554,7 @@
        "(0.9391341620231461, {'max_depth': 6, 'max_features': 0.7})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,10 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "knn_grid = GridSearchCV(first_knn, knn_params, cv=5)"
@@ -587,31 +583,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.8 s, sys: 9.89 ms, total: 1.81 s\n",
-      "Wall time: 1.81 s\n"
+      "CPU times: user 686 ms, sys: 14.9 ms, total: 701 ms\n",
+      "Wall time: 826 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
-       "           weights='uniform'),\n",
-       "       fit_params=None, iid=True, n_jobs=1,\n",
-       "       param_grid={'n_neighbors': range(5, 30, 5)},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
-       "       scoring=None, verbose=0)"
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=KNeighborsClassifier(algorithm='auto', leaf_size=30,\n",
+       "                                            metric='minkowski',\n",
+       "                                            metric_params=None, n_jobs=None,\n",
+       "                                            n_neighbors=5, p=2,\n",
+       "                                            weights='uniform'),\n",
+       "             iid='warn', n_jobs=None,\n",
+       "             param_grid={'n_neighbors': range(5, 30, 5)},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +630,7 @@
        "(0.8701243034719246, {'n_neighbors': 10})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +668,7 @@
        "0.936"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,34 +679,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[858,   9],\n",
-       "       [ 55,  78]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confusion_matrix(y_valid, tree_valid_pred)"
    ]
   },
   {
@@ -719,10 +694,31 @@
     {
      "data": {
       "text/plain": [
-       "array([867, 133])"
+       "array([[858,   9],\n",
+       "       [ 55,  78]])"
       ]
      },
      "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_valid, tree_valid_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([867, 133])"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,10 +729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import export_graphviz"
@@ -744,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +747,7 @@
        "0.905"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,10 +759,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "export_graphviz(second_tree, out_file='telecom_tree2.dot',\n",
@@ -777,31 +769,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 y.kashnitsky  staff  169928 27 сен 09:47 mlbootcamp5_dtree1.png\n",
-      "-rw-r--r--  1 y.kashnitsky  staff  165147 27 сен 09:47 mlbootcamp5_dtree2.png\n",
-      "-rw-r--r--  1 y.kashnitsky  staff  715308 20 сен 21:24 telecom_tree.png\n",
-      "-rw-r--r--  1 y.kashnitsky  staff  160102 20 сен 21:27 telecom_tree2.png\n"
+      "lesson3_decision_trees_dirty_inclass.ipynb\r\n",
+      "lesson3_practice_trees_titanic.ipynb\r\n",
+      "telecom_tree2.dot\r\n",
+      "topic3_trees_knn.ipynb\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -l *.png"
+    "!ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: dot: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!dot -Tpng telecom_tree2.dot -o telecom_tree2.png"
    ]
@@ -815,10 +813,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pydot in /Volumes/Storage/goinfre/thansen/PLEASEDONTDELETE/ana/lib/python3.7/site-packages (1.4.1)\n",
+      "Requirement already satisfied: pyparsing>=2.1.4 in /Volumes/Storage/goinfre/thansen/PLEASEDONTDELETE/ana/lib/python3.7/site-packages (from pydot) (2.4.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pydot"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -839,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
